# simplehtml

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
core/: formProvider.ts  publisher.ts  template.ts
petsite/: README.md  TUTORIAL.txt  config-bind.js  config.js  config.json  images-local.js  index.html  schema.json  script.js  style.css  thanks.html
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: FloatingPreviewWindow.tsx  FormBuilder.tsx  FormProviderSelector.tsx  LogsPanel.tsx  PreviewPanel.tsx  Sidebar.tsx  TopBar.tsx
src/services/: autoTemplateGenerator.ts  secureStore.ts  simpleTemplateEngine.ts  templateLoader.ts
src/services/__fixtures__/regressions/: menu-section.html
src/services/__tests__/: autoTemplateGenerator.test.ts
src/services/formProviders/: formspreeProvider.ts  netlifyFormsProvider.ts
src/services/publishers/: netlifyPublisher.ts
src/state/: ProjectContext.tsx
src/types/: project.ts  schema.ts
src/utils/: objectPaths.ts  placeholders.ts  platform.ts  zip.ts
template-exemplo/: config.json  index.html  schema.json  scripts.js  styles.css
