[package]
name = "simplehtml"
version = "0.1.0"
edition = "2021"
description = "simplehtml desktop app"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macros"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
keyring = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2"
anyhow = "1"
thiserror = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
